<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".exercise1.ExcersiseOneActivity">

        <Button
            android:id="@+id/btn_click_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_main_thread"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_click_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_background_thread"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/btn_click_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            />
        <TextView
            android:id="@+id/txt_thread_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_click_background"
            android:layout_marginTop="100dp"
            />
        <Button
            android:visibility="gone"
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_thread_name"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
