<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".exercise1.ExcersiseOneActivity">

        <Button
            android:id="@+id/btn_download_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_user_data"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_download_user_data_parallel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_user_data_parallel"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/btn_download_user_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            />
        <TextView
            android:id="@+id/txt_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_download_user_data_parallel"
            android:layout_marginTop="100dp"
            />
        <Button
            android:id="@+id/btn_download_user_data_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_user_data_main"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_total_count"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
